Dark/Light mode toggle

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="controls">
         <button id="historyBtn" class="ghost-btn" title="View history">📜 History</button>
         <button id="resetBtn" class="ghost-btn" title="Reset inputs">🔁 Reset</button>
+        <button id="themeToggleBtn" class="ghost-btn" title="Theme">🌙 Theme</button>
       </div>
     </header>
 
