Add button-styling to all buttons

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
           <div class="actions">
             <button id="calcBtn" class="primary">Calculate Love ❤️</button>
-            <button id="shareBtn" class="outline" title="Share result">🔗 Share</button>
+            <button id="shareBtn" class="ghost-btn" title="Share result">🔗 Share</button>
           </div>
         </form>
 
