Enhanced Layout, Responsive Design & Modern History Popup

--- a/index.html
+++ b/index.html
@@ -94,7 +94,16 @@
       </div>
 
       <div class="right">
-        <div class="panel">
+        <div class="panel tips-panel">
+          <h3>Tips</h3>
+          <ul>
+            <li>Same names → same result (unless jitter is allowed).</li>
+            <li>Toggle confetti or sound for a surprise.</li>
+            <li>You can share results via a short URL (copy to clipboard).</li>
+          </ul>
+        </div>
+
+        <div class="panel how-it-works-panel">
           <h3>How it works</h3>
           <ol>
             <li>We convert letters using <strong>Pythagorean numerology</strong>.</li>
@@ -104,22 +113,7 @@
           </ol>
         </div>
 
-        <div class="panel">
-          <h3>Tips</h3>
-          <ul>
-            <li>Same names → same result (unless jitter is allowed).</li>
-            <li>Toggle confetti or sound for a surprise.</li>
-            <li>You can share results via a short URL (copy to clipboard).</li>
-          </ul>
-        </div>
 
-        <div class="panel history-panel hidden" id="historyPanel">
-          <h3>History</h3>
-          <div id="historyList" class="history-list"></div>
-          <div class="history-actions">
-            <button id="clearHistory" class="outline">Clear history</button>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -127,6 +121,22 @@
     <audio id="chime" src="data:audio/mp3;base64,//uQZAAAAAAAAAAAAAAAAAAAA..."></audio>
     <!-- Dummy data URL for safety: replace with a real small base64 mp3 if you want sound -->
   </main>
+
+  <!-- History Popup Modal -->
+  <div class="history-popup-overlay hidden" id="historyPopupOverlay">
+    <div class="history-popup" id="historyPanel">
+      <div class="history-popup-header">
+        <h3>History</h3>
+        <button class="close-popup" id="closeHistoryPopup" title="Close">✕</button>
+      </div>
+      <div class="history-popup-content">
+        <div id="historyList" class="history-list"></div>
+        <div class="history-actions">
+          <button id="clearHistory" class="outline">Clear history</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     Made with ❤️ • Numerology logic (Pythagorean) • No data leaves your browser
