--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
       <div class="history-popup-content">
         <div id="historyList" class="history-list"></div>
         <div class="history-actions">
+          <button id="exportHistoryBtn">Export History as PDF</button>
+
           <button id="clearHistory" class="outline">Clear history</button>
         </div>
       </div>
