--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <form id="loveForm" class="form" autocomplete="off" onsubmit="return false;">
           <div class="inputs">
             <label class="input-wrap">
-              <input id="name1" type="text" placeholder="Your name" aria-label="Your name" maxlength="40">
+              <input id="name1" type="text" placeholder="Romeo" aria-label="Your name" maxlength="40">
               <span class="label">You</span>
             </label>
 
             <label class="input-wrap">
-              <input id="name2" type="text" placeholder="Their name" aria-label="Their name" maxlength="40">
+              <input id="name2" type="text" placeholder="Juliet" aria-label="Their name" maxlength="40">
               <span class="label">Crush</span>
             </label>
           </div>
