--- a/index.html
+++ b/index.html
@@ -140,6 +140,24 @@
     </div>
   </div>
 
+<div class="share-preview-overlay hidden" id="sharePreviewOverlay" role="dialog" aria-modal="true" aria-labelledby="sharePreviewTitle">
+  <div class="share-preview">
+    <div class="share-header">
+      <h3 id="sharePreviewTitle">Shareable Card</h3>
+      <button class="close-popup" id="closeSharePreview" title="Close">✕</button>
+    </div>
+    <div class="share-body">
+      <canvas id="shareCanvas" width="900" height="900" style="max-width:100%; height:auto; border-radius:12px; display:block; margin: 0 auto;"></canvas>
+
+    </div>
+    <div class="share-footer">
+      <button id="downloadImageBtn" class="primary">Download Image</button>
+      <button id="copyImageBtn" class="ghost-btn">Copy Image</button>
+      <button id="nativeShareBtn" class="ghost-btn">Native Share</button>
+    </div>
+  </div>
+</div>
+
   <footer class="footer">
     Made with ❤️ • Numerology logic (Pythagorean) • No data leaves your browser
   </footer>
