--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
 <body>
   <main class="app">
     <div class="bg-ambience"></div>
-
     <header class="top">
       <div class="logo">
-        <svg viewBox="0 0 24 24" class="logo-icon" aria-hidden="true">
-          <path d="M12 21s-7-4.5-9.5-8.5S3.2 3.5 12 7c8.8-3.5 9.5 5.5 9.5 5.5S19 16.5 12 21z"/>
-        </svg>
-        <span>Love Alchemy</span>
+        <img src="/logo.svg" alt="" srcset="" width="200px">
       </div>
 
       <!-- Mood indicator for entire page -->
