--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
 </div>
 
   <footer class="footer">
-    Made with ❤️ • Numerology logic (Pythagorean) • No data leaves your browser
+    <div class="footer-content">
+      <p>Made with ❤️ • Numerology logic (Pythagorean) • No data leaves your browser</p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
