--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
       <div class="feedback-list-section">
         <h4>Recent Feedback</h4>
         <div id="feedbackList" class="feedback-list"></div>
+        <button id="clearFeedback" class="outline">Clear All Feedback</button>
       </div>
     </div>
   </div>
