--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 						<div class="actions">
 							<button id="calcBtn" class="primary">Calculate Love ❤️</button>
 							<button id="shareBtn" class="ghost-btn" title="Share result">🔗 Share</button>
+							<a href="http://">
+								<button id="calcBtn" class="primary NG">Love Spinner ❤️</button>
+							</a>
 						</div>
 
 						<!-- Social share buttons -->
