--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<div class="actions">
 							<button id="calcBtn" class="primary">Calculate Love ❤️</button>
 							<button id="shareBtn" class="ghost-btn" title="Share result">🔗 Share</button>
-							<a href="http://">
+							<a href="./Games/">
 								<button id="calcBtn" class="primary NG">Love Spinner ❤️</button>
 							</a>
 						</div>
