--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
 						</div>
 
 						<div class="actions">
-							<button id="calcBtn" class="primary">Calculate Love ❤️</button>
-							<button id="shareBtn" class="ghost-btn" title="Share result">🔗 Share</button>
-							<a href="./Games/">
-								<button id="calcBtn" class="primary NG">Love Spinner ❤️</button>
-							</a>
-						</div>
+  <button id="calcBtn" class="primary">Calculate Love ❤️</button>
+  <button id="shareBtn" class="ghost-btn" title="Share result">🔗 Share</button>
+  <a href="./Games/index.html" class="primary NG">Love Spinner ❤️</a>
+</div>
+
 
 						<!-- Social share buttons -->
 						<div class="social-share">
