Added Love-Card Generator functionality

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 								>📘 Facebook</a
 							>
 							<button id="copyLinkBtn" title="Copy link">🔗 Copy Link</button>
+              <button id="generateLoveCard">♥️ Generate Love-Card</button>
 						</div>
 					</form>
 
@@ -376,6 +377,7 @@
 			</div>
 		</footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
