Solved Minor UI Changes #69

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<div class="feedback-popup-content">
 				<form id="feedbackForm" class="feedback-form">
 					<label for="feedbackName" class="feedback-label">
-						Name (Optional)
+						Name
 						<input type="text" id="feedbackName" placeholder="Your name" maxlength="50" />
 					</label>
 
