Enhance SEO by adding meta description and keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<!-- SEO basics -->
+  	<meta name="description" content="Love Alchemy — Discover love compatibility using numerology, fun animations, and shareable results. Find out your soul chemistry today!">
+  	<meta name="keywords" content="love calculator, numerology love, love compatibility, love test, soulmate calculator, romantic compatibility, Love Alchemy">
 	<link rel="icon" href="hearts.png" type="image/x-icon" />
 	<title>Love Alchemy — Advanced Love Calculator 💘</title>
 	<link rel="stylesheet" href="style.css" />
