Fix love input: enforce min/max and remove leading zeros

--- a/Games/index.html
+++ b/Games/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="love-calculator-input">
-            <input type="number" id="lovePercentage" placeholder="Enter Love %" min="0" max="100">
+            <input type="number" id="lovePercentage" placeholder="Enter Love %" min="0" max="100" step="1">
             <button id="setLoveBtn" class="set-love-btn">Set Love %</button>
         </div>
 
