Add Share to Instagram feature (#64)

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 						<a href="#" id="shareWhatsapp" target="_blank" title="Share on WhatsApp">📱 WhatsApp</a>
 						<a href="#" id="shareTwitter" target="_blank" title="Share on Twitter">🐦 Twitter</a>
 						<a href="#" id="shareFacebook" target="_blank" title="Share on Facebook">📘 Facebook</a>
+						<a href="#" id="shareInstagram" title="Share on Instagram">📷 Instagram</a>
 						<button id="copyLinkBtn" title="Copy link">🔗 Copy Link</button>
             <button id="generateLoveCard">♥️ Generate Love-Card</button>
 					</div>
