--- a/Games/index.html
+++ b/Games/index.html
@@ -43,6 +43,15 @@
             <button id="setLoveBtn" class="set-love-btn">Set Love %</button>
         </div>
 
+        <!-- Custom Alert -->
+        <div id="alertOverlay" class="custom-alert-overlay">
+          <div class="custom-alert-box">
+            <h3 id="alertTitle">Alert</h3>
+            <p id="alertMessage">Message</p>
+            <button class="alert-btn" onclick="closeAlert()">OK</button>
+          </div>
+        </div>
+
         <div class="wheel-container">
             <div class="wheel-pointer">▼</div>
             <canvas id="wheelCanvas"></canvas>
