Added hover to social icons  and gave proper social icons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		}
 	</script>
 	<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -96,10 +97,10 @@
 					<!-- Social share buttons -->
 					<div class="social-share">
 						<p>Share your love result:</p>
-						<a href="#" id="shareWhatsapp" target="_blank" title="Share on WhatsApp">📱 WhatsApp</a>
-						<a href="#" id="shareTwitter" target="_blank" title="Share on Twitter">🐦 Twitter</a>
-						<a href="#" id="shareFacebook" target="_blank" title="Share on Facebook">📘 Facebook</a>
-						<a href="#" id="shareInstagram" title="Share on Instagram">📷 Instagram</a>
+						<a href="#" id="shareWhatsapp" target="_blank" title="Share on WhatsApp"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
+						<a href="#" id="shareTwitter" target="_blank" title="Share on Twitter"> <i class="fa-brands fa-x-twitter"></i>Twitter</a>
+						<a href="#" id="shareFacebook" target="_blank" title="Share on Facebook"><i class="fa-brands fa-facebook"></i> Facebook</a>
+						<a href="#" id="shareInstagram" title="Share on Instagram"><i class="fa-brands fa-square-instagram"></i> Instagram</a>
 						<button id="copyLinkBtn" title="Copy link">🔗 Copy Link</button>
             <button id="generateLoveCard">♥️ Generate Love-Card</button>
 					</div>
