feat: Make navbar responsive with hamburger toggle

--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
 				<span id="moodLabel" class="mood-label">Playful</span>
 			</div>
 
-			<div class="controls">
-				<button id="historyBtn" class="ghost-btn" title="View history">📜 History</button>
-				<button id="feedbackBtn" class="ghost-btn" title="Give Feedback">💬 Feedback</button>
-				<button id="resetBtn" class="ghost-btn" title="Reset inputs">🔁 Reset</button>
-				<div id="google_translate_element" class="translate-widget"></div>
-				<button id="themeToggleBtn" class="ghost-btn" title="Theme">🌙 Theme</button>
-			</div>
+		<button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            
+            <!-- Your navigation controls -->
+            <div id="nav-controls" class="controls">
+                <button id="historyBtn" class="ghost-btn" title="View history">📜 History</button>
+                <button id="feedbackBtn" class="ghost-btn" title="Give Feedback">💬 Feedback</button>
+                <button id="resetBtn" class="ghost-btn" title="Reset inputs">🔁 Reset</button>
+                <div id="google_translate_element" class="translate-widget"></div>
+                <button id="themeToggleBtn" class="ghost-btn" title="Theme">🌙 Theme</button>
+            </div>
 		</header>
 
 		<section class="card">
