Name required in feedback

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 				<form id="feedbackForm" class="feedback-form">
 					<label for="feedbackName" class="feedback-label">
 						Name
-						<input type="text" id="feedbackName" placeholder="Your name" maxlength="50" />
+						<input type="text" id="feedbackName" placeholder="Your name" maxlength="50" required />
 					</label>
 
 					<label for="feedbackEmail" class="feedback-label">
